--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ nb = "0.1.0"
 byteorder = { version = "1.3.4", default-features = false }
 heapless = "0.5.6"
 embedded-hal = "0.2.4"
+embedded-dma = "0.1.2"
 cast = { version = "0.2", default-features = false }
 void = { version = "1.0", default-features = false }
 
