--- a/testsuite/Cargo.toml
+++ b/testsuite/Cargo.toml
@@ -12,11 +12,11 @@ harness = false
 
 [dependencies.defmt]
 git = "https://github.com/knurling-rs/defmt"
-branch = "main"
+rev = "28c1afb4d3bad747ef47737a83f5c8b13928cb8a"
 
 [dependencies.defmt-rtt]
 git = "https://github.com/knurling-rs/defmt"
-branch = "main"
+rev = "28c1afb4d3bad747ef47737a83f5c8b13928cb8a"
 
 [dependencies.panic-probe]
 git = "https://github.com/knurling-rs/probe-run"
