--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ byteorder = { version = "1.3.4", default-features = false }
 heapless = "0.5.6"
 embedded-hal = "0.2.4"
 embedded-dma = "0.1.2"
+libm = "0.2.1"
 cast = { version = "0.2", default-features = false }
 void = { version = "1.0", default-features = false }
 
